[gd_scene load_steps=7 format=2]

[ext_resource path="res://nd_Principal.gd" type="Script" id=1]
[ext_resource path="res://cuerpo (2).png" type="Texture" id=2]
[ext_resource path="res://sound/boca mujer.ogg" type="AudioStream" id=3]
[ext_resource path="res://sound/orejasMujer.ogg" type="AudioStream" id=4]
[ext_resource path="res://sound/ojosmujer.ogg" type="AudioStream" id=5]
[ext_resource path="res://sound/cabezaMujer.ogg" type="AudioStream" id=6]

[node name="nd_Principal" type="Node2D"]
script = ExtResource( 1 )

[node name="spr_godot" type="Sprite" parent="."]
position = Vector2( 511.463, 181.788 )
scale = Vector2( 0.868676, 0.838942 )
texture = ExtResource( 2 )

[node name="boton" type="TextureButton" parent="."]
margin_left = 387.0
margin_top = 80.0
margin_right = 641.0
margin_bottom = 290.0

[node name="oreja" type="TextureButton" parent="."]
margin_left = 410.0
margin_top = 205.0
margin_right = 439.0
margin_bottom = 249.0

[node name="ojos" type="TextureButton" parent="."]
margin_left = 459.0
margin_top = 200.0
margin_right = 556.0
margin_bottom = 229.0

[node name="boca" type="TextureButton" parent="."]
margin_left = 476.0
margin_top = 253.0
margin_right = 539.0
margin_bottom = 285.0

[node name="soundBoca" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="soundOrejas" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="soundOjos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="soundCabeza" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="LLAMAR" type="Button" parent="."]
margin_left = 196.0
margin_top = 461.0
margin_right = 543.0
margin_bottom = 574.0
text = "preseed"
